# mem-agent

./: .env-example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
evaluation/: .env-example  README.md
evaluation/configs-example/: mem_cube_config.json  mos_memos_config.json
evaluation/scripts/: run_locomo_eval.sh
evaluation/scripts/locomo/: locomo_eval.py  locomo_ingestion.py  locomo_metric.py  locomo_responses.py  locomo_search.py  prompts.py
mem_agent/: __init__.py  __main__.py  chat.py  main.py
